--- a/ModernNLP_S1.ipynb
+++ b/ModernNLP_S1.ipynb
@@ -34,7 +34,7 @@
         "id": "Khz58hzullVA"
       },
       "source": [
-        "# ModernNLP: Lecture 1\n",
+        "# ModernNLP: #1\n",
         "* Talk about word usage change and this recent [Simple, Interpretable and Stable Method for Detecting Words with Usage Change across Corpora](https://www.aclweb.org/anthology/2020.acl-main.51.pdf).\n",
         "* As background, read Mikolov's [ICLR](https://research.google/pubs/pub41224/) and [NIPS](https://papers.nips.cc/paper/2013/hash/9aa42b31882ec039965f3c4923ce901b-Abstract.html) papers, and alingment models such as [Procrustes](https://www.aclweb.org/anthology/K18-1021.pdf) and [Compass](https://arxiv.org/abs/1906.02376).\n",
         "* Whoever interested take a look [subword embeddings](https://www.aclweb.org/anthology/P16-1162.pdf). \n",
